package br.com.ktlj.kotlin_fixtures.domain

data class Author(
  val id: Long,
  val name: String,
)